# real-salient

./: CMakeLists.txt  LICENSE  README.md  preset.json
examples/saber-salient/: CMakeLists.txt
examples/saber-salient/include/: saber-salient.hpp
examples/saber-salient/src/: saber-salient.cu
examples/vr-salient/: CMakeLists.txt
examples/vr-salient/assets/: camera.settings.json  triangle.frag  triangle.frag.spv  triangle.vert  triangle.vert.spv
examples/vr-salient/cmake/: FindOpenVR.cmake  FindRealSense2.cmake
examples/vr-salient/include/: camera.hpp  cameraD415.hpp  vrbounds.hpp  vulkanheadless.hpp
examples/vr-salient/src/: main.cu  vulkanheadless.cpp
include/: crf.cuh  crf_permutohedral.cuh  gmm.cuh  salient.cuh  util.hpp
include/salient/: crf.cuh  crf_permutohedral.cuh  gmm.cuh  salient.cuh  salient_structs.hpp  util.hpp
src/: main.cu
